Description overflow fix
If project description was very long or had <p> elements inside, it would stretch the entire screen in the search results. We added a height cap to the description in the search results.

--- a/css/index.css
+++ b/css/index.css
@@ -181,6 +181,7 @@ a {
     font-size: 35px;
     font-weight: bold;
     padding: 10px;
+    background-color: rgba(0,0,0,0.3);
 }
 .caption-author {
     font-size: 20px;
@@ -190,6 +191,8 @@ a {
 .caption-description {
     font-size: 20px;
     margin:10px;
+    overflow: hidden;
+    max-height: 75px;
 }
 
 /* The dots/bullets/indicators */
